# DevToolkit

./: .gitignore  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api-gateway/: package.json  server.js
code-generator/: pom.xml
code-generator/src/main/java/com/devtoolkit/: CodeGeneratorApplication.java
database-manager/: app.py  requirements.txt
docker/: docker-compose.yml
go-microservice/: main.go
performance-monitor/: CMakeLists.txt
performance-monitor/src/: main.cpp
ruby-analytics/: ruby_data_analyzer.rb
rust-data-processor/: Cargo.toml
rust-data-processor/src/: main.rs
task-automation/: composer.json
task-automation/src/: TaskAutomation.php
web-dashboard/src/: App.tsx
