[package]
name = "rust-data-processor"
version = "1.0.0"
edition = "2021"
authors = ["digital-solution-admin"]
description = "High-performance data processing engine with async capabilities"
license = "MIT"
repository = "https://github.com/digital-solution-admin/DevToolkit"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
csv = "1.2"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.7"
warp = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
config = "0.13"
clap = { version = "4.3", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "data-processor"
path = "src/main.rs"
